// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Default renders correctly 1`] = `
<jest>
  <nav
    class="ecl-tabs"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
  >
    <div
      class="ecl-tabs__container"
    >
      <ul
        class="ecl-tabs__list"
      >
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 1 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 2 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 3 with a very long label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link ecl-tabs__link--active"
            href="/example"
          >
            Item 4 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 5 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 6 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 7 label
          </a>
        </li>
        <li
          class="ecl-tabs__item ecl-tabs__item--more"
        >
          <button
            class="ecl-button ecl-button--secondary ecl-tabs__toggle"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                More (%d)
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        aria-hidden="true"
        class="ecl-tabs__prev"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
      <button
        aria-hidden="true"
        class="ecl-tabs__next"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
    </div>
  </nav>
</jest>
`;

exports[`Tabs Default renders correctly with extra attributes 1`] = `
<jest>
  <nav
    class="ecl-tabs"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-tabs__container"
    >
      <ul
        class="ecl-tabs__list"
      >
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 1 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 2 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 3 with a very long label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link ecl-tabs__link--active"
            href="/example"
          >
            Item 4 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 5 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 6 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 7 label
          </a>
        </li>
        <li
          class="ecl-tabs__item ecl-tabs__item--more"
        >
          <button
            class="ecl-button ecl-button--secondary ecl-tabs__toggle"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                More (%d)
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        aria-hidden="true"
        class="ecl-tabs__prev"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
      <button
        aria-hidden="true"
        class="ecl-tabs__next"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
    </div>
  </nav>
</jest>
`;

exports[`Tabs Default renders correctly with extra class names 1`] = `
<jest>
  <nav
    class="ecl-tabs custom-class custom-class--test"
    data-ecl-auto-init="Tabs"
    data-ecl-tabs="true"
  >
    <div
      class="ecl-tabs__container"
    >
      <ul
        class="ecl-tabs__list"
      >
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 1 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 2 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 3 with a very long label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link ecl-tabs__link--active"
            href="/example"
          >
            Item 4 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 5 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 6 label
          </a>
        </li>
        <li
          class="ecl-tabs__item"
        >
          <a
            class="ecl-link ecl-tabs__link"
            href="/example"
          >
            Item 7 label
          </a>
        </li>
        <li
          class="ecl-tabs__item ecl-tabs__item--more"
        >
          <button
            class="ecl-button ecl-button--secondary ecl-tabs__toggle"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                More (%d)
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
                data-ecl-icon=""
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </span>
          </button>
        </li>
      </ul>
    </div>
    <div
      class="ecl-tabs__controls"
    >
      <button
        aria-hidden="true"
        class="ecl-tabs__prev"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
      <button
        aria-hidden="true"
        class="ecl-tabs__next"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        />
      </button>
    </div>
  </nav>
</jest>
`;
